--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -16,12 +16,22 @@ jobs:
       
     - name: Checkout Repository
       uses: actions/checkout@v3
+      
+    - name: Update Xcode Settings
+      run: |
+        set -euo pipefail
+        defaults write com.apple.dt.Xcode IDESkipPackagePluginFingerprintValidatation -bool YES
+      
+    - name: Load Latest Xcode
+      uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: latest-stable
         
     - name: Build project
       run: swift package clean
-      
+
     - name: Build project
-      run: swift build -v
-      
+      run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild build-for-testing -destination 'name=iPhone 14 Pro' -scheme 'BunnyNet-Package' | xcpretty
+
     - name: Run tests
-      run: swift test -v
+      run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild test-without-building -destination 'name=iPhone 14 Pro' -scheme 'BunnyNet-Package' | xcpretty
