--- a/Example-App/Example-App/Info.plist
+++ b/Example-App/Example-App/Info.plist
@@ -13,5 +13,9 @@
 	<array>
 		<string>processing</string>
 	</array>
+  <key>BGTaskSchedulerPermittedIdentifiers</key>
+  <array>
+      <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+  </array>
 </dict>
 </plist>
