Change Menu with Confirmation Dialog

--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -6,15 +6,19 @@ on:
   push:
     branches:
       - main
-      - develop
+      - chore/change-menu-to-confirmation-dialog
 
 jobs:
   build-and-deploy:
-    runs-on: macos-13
+    runs-on: macos-latest
     
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
+      
+    - uses: swift-actions/setup-swift@v1
+      with:
+        swift-version: "5.9.0"
     
     - name: Install SourceDocs
       run: brew install sourcedocs
