--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -6,19 +6,15 @@ on:
   push:
     branches:
       - main
-      - chore/change-menu-to-confirmation-dialog
+      - develop
 
 jobs:
   build-and-deploy:
-    runs-on: macos-latest
+    runs-on: macos-13
     
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
-      
-    - uses: swift-actions/setup-swift@v1
-      with:
-        swift-version: "5.9.0"
     
     - name: Install SourceDocs
       run: brew install sourcedocs
